flex-wrap issue problem to be sorted for ff.

--- a/css/main.css
+++ b/css/main.css
@@ -267,6 +267,7 @@ header h1 {
         /*background: linear-gradient(0deg, #999, #ffffff);*/
         padding-bottom:1em;
     }
+
     #hero_container section {
         padding:0 .5em .5em;
         flex: 0 1 auto;
@@ -286,16 +287,23 @@ header h1 {
     }
     #prime_content {
         padding:0 .5em .5em;
+        display:flex;
         flex: 4 1 0;
+        /*flex-wrap: wrap;*/
+        flex-flow: row wrap;
+        justify-content: space-between;
         /*width:30%;
         width: calc(45% - 1em);*/
         margin-right:1em;
         align-self: stretch;
         background: #fff;
         border-left:solid 1px #999;
-
-        display:flex;
-        justify-content: space-between;
+    }
+    /*
+    This is a hack to get around FF's lack of support for flex-wrap see http://caniuse.com/#search=flex notes section for more info.
+    */
+    .no-flexbox #prime_content article {
+        width:calc(50% - 1em);
     }
     #prime_content h2 {
         margin:0;
